istio-mtls.yml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: istio-system
spec:
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: helloworld1
  namespace: default
spec:
  selector:
    matchLabels:
      app: helloworld1
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: helloworld2
  namespace: default
spec:
  selector:
    matchLabels:
      app: helloworld2
  mtls:
    mode: STRICT
