istio-gateway-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: apisix-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: apisix-cert
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld1
spec:
  hosts:
  - "*"
  gateways:
  - apisix-gateway
  http:
  - match:
    - uri:
        prefix: /helloworld1
    route:
    - destination:
        host: helloworld1
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld2
spec:
  hosts:
  - "*"
  gateways:
  - apisix-gateway
  http:
  - match:
    - uri:
        prefix: /helloworld2
    route:
    - destination:
        host: helloworld2
        port:
          number: 82
